--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,170 +1,166 @@
 /* Addition of relevant Fonts */
 @font-face {
-    font-family: 'OpenSans-Bold';
-    src: url('../fonts/OpenSans-Bold.ttf') format('truetype');
-    font-weight: normal;
-    font-style: normal;
+	font-family: 'OpenSans-Bold';
+	src: url('../fonts/OpenSans-Bold.ttf') format('truetype');
+	font-weight: normal;
+	font-style: normal;
 }
 @font-face {
-    font-family: 'OpenSans-Italic';
-    src: url('../fonts/OpenSans-Italic.ttf') format('truetype');
-    font-weight: normal;
-    font-style: normal;
+	font-family: 'OpenSans-Italic';
+	src: url('../fonts/OpenSans-Italic.ttf') format('truetype');
+	font-weight: normal;
+	font-style: normal;
 }
 @font-face {
-    font-family: 'OpenSans-Light';
-    src: url('../fonts/OpenSans-Light.ttf') format('truetype');
-    font-weight: normal;
-    font-style: normal;
+	font-family: 'OpenSans-Light';
+	src: url('../fonts/OpenSans-Light.ttf') format('truetype');
+	font-weight: normal;
+	font-style: normal;
 }
 @font-face {
-    font-family: 'OpenSans-Regular';
-    src: url('../fonts/OpenSans-Regular.ttf') format('truetype');
-    font-weight: normal;
-    font-style: normal;
+	font-family: 'OpenSans-Regular';
+	src: url('../fonts/OpenSans-Regular.ttf') format('truetype');
+	font-weight: normal;
+	font-style: normal;
 }
 @font-face {
-    font-family: 'OpenSans-Semibold';
-    src: url('../fonts/OpenSans-Semibold.ttf') format('truetype');
-    font-weight: normal;
-    font-style: normal;
+	font-family: 'OpenSans-Semibold';
+	src: url('../fonts/OpenSans-Semibold.ttf') format('truetype');
+	font-weight: normal;
+	font-style: normal;
 }
 
-*{
+* {
 	outline: none !important;
 }
 
-
 html, body {
-  color: #656565;
-  font-family: 'OpenSans-Regular', sans serif !important;
-  font-size: 14px;
-  overflow-x: hidden;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -o-user-select: none;
-  -ms-user-select: none;
+	color: #656565;
+	font-family: 'OpenSans-Regular', sans serif !important;
+	font-size: 14px;
+	overflow-x: hidden;
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	-o-user-select: none;
+	-ms-user-select: none;
 }
 
 section {
-    padding-top: 2em;
-    padding-bottom: 2em;
-    background-size: cover!important;
+	padding-top: 2em;
+	padding-bottom: 2em;
+	background-size: cover !important;
 }
 
-ul, ol{
+ul, ol {
 	padding: 0px;
 	margin: 0px;
 	list-style: none;
 	list-style-type: none;
 }
 
-a{
+a {
 	text-decoration: none;
 }
 
-a:hover,
-a:focus{
+a:hover, a:focus {
 	text-decoration: none;
 }
 
 /*Common functionality*/
-.no-margin-right{
-  margin-right: 0px;
+.no-margin-right {
+	margin-right: 0px;
 }
-.no-margin-left{
-  margin-left: 0px;
+.no-margin-left {
+	margin-left: 0px;
 }
-.no-margin-top{
-  margin-top: 0px;
+.no-margin-top {
+	margin-top: 0px;
 }
-.no-margin-bottom{
-  margin-bottom: 0px;
+.no-margin-bottom {
+	margin-bottom: 0px;
 }
-.no-padding-bottom{
-  padding-bottom: 0px;
+.no-padding-bottom {
+	padding-bottom: 0px;
 }
-.no-padding-top{
-  padding-top: 0px;
+.no-padding-top {
+	padding-top: 0px;
 }
-.no-padding-right{
-  padding-right: 0px;
+.no-padding-right {
+	padding-right: 0px;
 }
-.no-padding-left{
-  padding-left: 0px;
+.no-padding-left {
+	padding-left: 0px;
 }
-.no-border-top-left-radius{
-  border-top-left-radius: 0px !important;
+.no-border-top-left-radius {
+	border-top-left-radius: 0px !important;
 }
-.no-border-top-right-radius{
-  border-top-right-radius: 0px !important;
+.no-border-top-right-radius {
+	border-top-right-radius: 0px !important;
 }
-.no-border-bottom-right-radius{
-  border-bottom-right-radius: 0px !important;
+.no-border-bottom-right-radius {
+	border-bottom-right-radius: 0px !important;
 }
-.no-border-bottom-left-radius{
-  border-bottom-left-radius: 0px !important;
+.no-border-bottom-left-radius {
+	border-bottom-left-radius: 0px !important;
 }
-.vertical-center{
-  vertical-align: middle;
+.vertical-center {
+	vertical-align: middle;
 }
 
-.gap, .semi-gap,
-.quarter-gap, .gap20{
+.gap, .semi-gap, .quarter-gap, .gap20 {
 	display: block;
 	width: 100%;
 }
-.gap{
-  height: 100px;
+.gap {
+	height: 100px;
 }
 
-.semi-gap{
-  height: 50px;
+.semi-gap {
+	height: 50px;
 }
-.quarter-gap{
+.quarter-gap {
 	height: 25px;
 }
 
-.gap20{
+.gap20 {
 	height: 20px;
 }
 
-.bg-theme-color{
-      background-color: #f37254;
+.bg-theme-color {
+	background-color: #f37254;
 }
-.theme-color{
-  color: #f37254;
+.theme-color {
+	color: #f37254;
 }
 .bg-grey {
-    background-color: #EEEEEE;
+	background-color: #EEEEEE;
 }
 .form-group .required:after {
-  content:"*";
-  color:brown;
+	content: "*";
+	color: brown;
 }
 
 .modal-footer {
-    padding: 15px;
-    text-align: right;
-    border-top: none;
-}
-}
-
-.btn-default-white{
-	    color: #ffffff;
-    background-color: rgba(0,0,0,0);
-    font-weight: 600;
-    text-align: center;
-    -ms-touch-action: manipulation;
-    touch-action: manipulation;
-    cursor: pointer;
-        border: 2px solid #ffffff;
-        text-transform: uppercase;
-padding: 8px 12px;
+	padding: 15px;
+	text-align: right;
+	border-top: none;
 }
 
-.btn-default-white:hover,
-.btn-default-white:focus{
+
+.default-white-btn {
+	color: #ffffff;
+	background-color: rgba(0,0,0,0);
+	font-weight: 600;
+	text-align: center;
+	-ms-touch-action: manipulation;
+	touch-action: manipulation;
+	cursor: pointer;
+	border: 2px solid #ffffff;
+	text-transform: uppercase;
+	padding: 8px 12px;
+}
+
+.default-white-btn:hover, .default-white-btn:focus {
 	background-color: rgba(255,255,255,1);
 	color: #F37254;
 }
@@ -172,73 +168,72 @@ padding: 8px 12px;
 /* Footer css */
 
 #footer {
-padding-top: 2em;
-padding-bottom: 2em;
-background-color: #414042;
-color:#fff;
+	padding-top: 2em;
+	padding-bottom: 2em;
+	background-color: #414042;
+	color: #fff;
 }
 
 #footer a {
-	color:#fff;
-	text-decoration:none;
+	color: #fff;
+	text-decoration: none;
 }
 
 .logo {
-font-size:25px;
-font-weight:400;
+	font-size: 25px;
+	font-weight: 400;
 }
 
 p.info, p.connect {
-	font-size:14px;
+	font-size: 14px;
 }
 
 #footer ul li {
-padding-top:10px;
+	padding-top: 10px;
 }
 
 #footer ul {
-list-style:none;
-margin:0;
-padding:0;
+	list-style: none;
+	margin: 0;
+	padding: 0;
 }
 
 #footer .social li {
 	padding-right: 20px;
-    display: inline-block;
+	display: inline-block;
 }
 
 /* Footer css ends*/
 
 /* Header css */
 
-.lp-navbar{
+.lp-navbar {
 	position: fixed;
 	z-index: 101;
-	    width: 100%;
-	    background-color: transparent;
-	    border-color: transparent;
-	    border-radius: 0px;
-	    color: #ffffff;
-}
-
-.lp-navbar .navbar-brand {
-    color: #ffffff;
-}
-
-.lp-navbar .navbar-brand:hover,
-.lp-navbar .navbar-brand:focus{
+	width: 100%;
+	background-color: transparent;
+	border-color: transparent;
+	border-radius: 0px;
 	color: #ffffff;
 }
 
-.lp-navbar select{
-	    background-color: transparent;
-    margin-top: 15px;
-    margin-bottom: 15px;
-    padding: 5px;
+.lp-navbar .navbar-brand {
+	color: #ffffff;
+}
+
+.lp-navbar .navbar-brand:hover, .lp-navbar .navbar-brand:focus {
+	color: #ffffff;
+}
+
+.lp-navbar select {
+	background-color: transparent;
+	margin-top: 15px;
+	margin-bottom: 15px;
+	padding: 5px;
 }
 /* Header css ends*/
 
-.header{
+.header {
 	width: 100%;
 	background: url(../images/banner_bg.jpg) no-repeat;
 	-webkit-background-size: cover;
@@ -248,137 +243,144 @@ padding:0;
 	background-position: center;
 	background-size: 100% 100%;
 }
-.header-top{
+.header-top {
 	background: rgba(0, 0, 0, 0.4);
 	padding: 3% 0;
 }
-.logo{
-	float:left;
+.logo {
+	float: left;
 }
-.menu{
-	 float:right;
+.menu {
+	float: right;
 }
-  .menu li{
-	display:inline-block;
- }
- .menu li:first-child{
-   	margin-left:0;
- }
- .menu li a{
-  	display: block;
-	font-size:15px;
+.menu li {
+	display: inline-block;
+}
+.menu li:first-child {
+	margin-left: 0;
+}
+.menu li a {
+	display: block;
+	font-size: 15px;
 	text-transform: uppercase;
-	padding:10px 20px;
+	padding: 10px 20px;
 	color: #FFF;
 	-webkit-transition: all 0.3s ease;
 	-moz-transition: all 0.3s ease;
 	-o-transition: all 0.3s ease;
 	transition: all 0.3s ease;
 	font-weight: 600;
- }
- .menu li a:hover ,.menu li.active a{
-	 background:#fff;
-	 color:#4BCAFF;
- } 
- #nav .current a {
-	 color:red;
+}
+.menu li a:hover, .menu li.active a {
+	background: #fff;
+	color: #4BCAFF;
+}
+#nav .current a {
+	color: red;
 }
 .toggleMenu {
-    display:  none;
-  	padding: 2px 0px 0px 0px;
+	display: none;
+	padding: 2px 0px 0px 0px;
 }
-.nav:before,
-.nav:after {
-    content: " "; 
-    display: table; 
+.nav:before, .nav:after {
+	content: " ";
+	display: table;
 }
 .nav:after {
-    clear: both;
+	clear: both;
 }
 .nav ul {
-    list-style: none;
+	list-style: none;
 }
-@media screen and (max-width:800px) {
+@media screen and (max-width: 800px) {
 	.active {
-        display: block;
-    }
-    .menu li a{
-    	text-align:left;
-    	border-radius:0;
-    	-webkit-border-radius:0;
-    	-moz-border-radius:0;
-    	-o-border-radius:0;
-    }
-    .nav {
-	    list-style: none;
+		display: block;
+	}
+	.menu li a {
+		text-align: left;
+		border-radius: 0;
+		-webkit-border-radius: 0;
+		-moz-border-radius: 0;
+		-o-border-radius: 0;
+	}
+	.nav {
+		list-style: none;
 		width: 95%;
-		position: absolute;
+		/*position: absolute;*/
 		right: 20px;
-		background:rgba(73, 84, 91, 0.87);
-		top:66px;
+		background: rgba(73, 84, 91, 0.87);
+		top: 66px;
 		z-index: 111;
-    }
-    .nav:after {
+	}
+	.nav:after {
 		content: '';
 		position: absolute;
-		right:18px;
+		right: 18px;
 		top: -9px;
-		border-left:10px solid rgba(0, 0, 0, 0);
-		border-right:10px solid rgba(0, 0, 0, 0);
-		border-bottom:10px solid rgba(73, 84, 91, 0.87);
+		border-left: 10px solid rgba(0, 0, 0, 0);
+		border-right: 10px solid rgba(0, 0, 0, 0);
+		border-bottom: 10px solid rgba(73, 84, 91, 0.87);
 	}
-    .menu li a span.messages{
-    	text-align:center;
-    	top:15px;
-    }
-    .nav li ul{
-    	width:100%;   	
-    }
-    .menu ul{
-    	margin:0;
-    }
-    .nav > li.hover > ul {
-        width:100%;
-    }
-    .nav > li {
-        float: none;
-        display:block;
-    }
-    .nav ul {
-        display: block;
-        width: 100%;
-    }
-   .nav > li.hover > ul , .nav li li.hover ul {
-        position: static;
-    }
-    .nav li a{
-    	border-top:1px solid rgba(73, 84, 91, 0.87);
-    }
-     .nav li:first-child a{
-     	border-top:none;
-     }
- }
-.header-bottom{
-	padding:15% 0;
-	text-align:center;
+	.menu li a span.messages {
+		text-align: center;
+		top: 15px;
+	}
+	.nav li ul {
+		width: 100%;
+	}
+	.menu ul {
+		margin: 0;
+	}
+	.nav > li.hover > ul {
+		width: 100%;
+	}
+	.nav > li {
+		float: none;
+		display: block;
+	}
+	.nav ul {
+		display: block;
+		width: 100%;
+	}
+	.nav > li.hover > ul, .nav li li.hover ul {
+		position: static;
+	}
+	.nav li a {
+		border-top: 1px solid rgba(73, 84, 91, 0.87);
+	}
+	.nav li:first-child a {
+		border-top: none;
+	}
 }
-.header-bottom h1{
+.header-bottom {
+	padding: 15% 0;
+	text-align: center;
+}
+.header-bottom h1 {
 	font-family: 'caviar_dreamsregular';
 	color: #FFF;
-	font-size:2.7em;
+	font-size: 2.7em;
 	text-transform: uppercase;
 	background: #4B565D;
 	padding: 10px;
-	width:48%;
+	width: 48%;
 	margin: 0 auto 2% auto;
 }
-.header-bottom h2{
+.header-bottom h2 {
 	font-family: 'caviar_dreamsregular';
 	color: #FFF;
-	font-size:2.7em;
+	font-size: 2.7em;
 	text-transform: uppercase;
 	background: #4B565D;
 	padding: 10px;
-	width:68%;
+	width: 68%;
 	margin: 0 auto;
+}
+
+.lineHeight30 {
+	line-height: 30px !important;
+}
+
+.color-green {
+	color: #1d9d74;
 }
