--- a/app/views/footer/footer.html
+++ b/app/views/footer/footer.html
@@ -33,7 +33,7 @@
    <div class="col-xs-12 col-sm-6 col-md-3 col-md-offset-1">
       <div class="h4"> COMPANY</div>
       <div class="row">
-         <div class="col-xs-6 col-sm-5 col-md-4">
+         <div class="col-xs-12">
             <ul>
                <a href="#">
                   <li>About Us</li>
