committing maps module

--- a/app/views/detail/detail.html
+++ b/app/views/detail/detail.html
@@ -161,6 +161,18 @@
 					</div>
 				</div>
 			</div>
+		
+		<!-- Adding Map for the location -->
+		<div class="pamphlet-container details-pamphlet">
+				<div class="pamphlet-header">
+					<div class="pamphlet-title">
+						Getting Around is easy !!
+					</div>
+				</div>
+				<div class="pamphlet-body">
+					<div id="map"></div>
+				</div>
+			</div>
 		</div>
 	</div>
 	<div class="col-xs-12 col-sm-4">
