--- a/app/views/data/data.html
+++ b/app/views/data/data.html
@@ -10,7 +10,7 @@
 	</div>
 	<!-- Adding the list section -->
 	
-	<div class='col-sm-9 bg-grey'>
+	<div class='col-xs-12 col-sm-9 bg-grey'>
 			<div class='col-xs-12'>
 				<div class='col-xs-12'>
 					<div class='col-xs-12'>
