committing swiper issue resolved

--- a/app/views/detail/detail.html
+++ b/app/views/detail/detail.html
@@ -1,5 +1,5 @@
-<div class="" data-ng-controller='detailController as vm'>
-	<div id="coverPage" class="detail-cover text-center" data-ng-click="vm.openGallery();">
+<div class="">
+	<div id="coverPage" class="detail-cover text-center" data-ng-click="vm.openGallery();" style="background-image:url({{vm.coverbgImageURL}})">
 		<button class="btn default-white-btn view-gallery-btn">View Gallery</button>
 		</div>
 <div class="row">
