--- a/app/views/detail/detail.html
+++ b/app/views/detail/detail.html
@@ -1,4 +1,4 @@
-<div class="" data-ng-controller='detailController as vm'>
+<div class="">
 	<div id="coverPage" class="detail-cover text-center" data-ng-click="vm.openGallery();">
 		<button class="btn default-white-btn view-gallery-btn">View Gallery</button>
 		</div>
