--- a/app/views/data/data.html
+++ b/app/views/data/data.html
@@ -14,7 +14,7 @@
 			<div class='col-xs-12'>
 				<div class='col-xs-12'>
 					<div class='col-xs-12'>
-						<h2 class="h3"> Showing <div class="results-number"></div></h2>
+						<h2 class="h3"> Showing <div class="results-number">{{vm.setFromRecord}}-{{vm.setToRecord}} of {{vm.totalRecords}} records</div></h2>
 						<div class="gap20"></div>
 					</div>
 	
@@ -47,7 +47,7 @@
 	</div>
 </div>
 
-<dir-pagination-controls boundry-links="true" on-page-change="pageChangeHandler(newPageNumber)" pagination-id="dataPagination"></dir-pagination-controls>
+<dir-pagination-controls boundry-links="true" on-page-change="pageChangeHandler(newPageNumber)" template-url="views/templates/dirPagination.tpl.html" pagination-id="dataPagination"></dir-pagination-controls>
 
 
 
