--- a/app/views/header/header.html
+++ b/app/views/header/header.html
@@ -1,51 +1,30 @@
-<!--<nav class="navbar navbar-default lp-navbar">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <a class="navbar-brand" href="#">Le Partycious</a>
-    </div>
-    <ul class="nav navbar-nav navbar-right">
-      <li><select>
-      	<option>Chandigarh</option>
-      	<option>Bikaner</option>
-      </select></li>
-      <li><a href="#"><span class="glyphicon glyphicon-user"></span> Login</a></li>
-      
-    </ul>
-  </div>
-</nav>-->
-
-<!--start header-->
-	<div class="header">
-	  <div class="header-top">
-		<div class="container">
-			<div class="logo">
-			  <a href="index.html">LE PARTYCIOUS<!--<img src="images/logo.png" alt=""/>--></a>
-			</div>
-			<div class="menu">
-			  <a class="toggleMenu" href="#"><img src="images/nav_icon.png" alt="" /></a>
-				<ul class="nav" id="nav">
-				   <li><a href="#home" class="scroll">Home</a></li>
-				   <li><a href="#services" class="scroll">Services</a></li>
-				   <li><a href="#features" class="scroll">Features</a></li>
-				   	<li><a href="#portfolio" class="scroll">Portfolio</a></li>
-				   <li><a href="#contact" class="scroll">Contact</a></li>								
-				   <div class="clear"></div>
-			    </ul>
-			</div>							
-	        <div class="clear"></div>
-	        <script type="text/javascript" src="scripts/responsive-nav.js"></script>
-			<script type="text/javascript" src="scripts/move-top.js"></script>
-			<script type="text/javascript" src="scripts/easing.js"></script>
-			   <script type="text/javascript">
-					jQuery(document).ready(function($) {
-						$(".scroll").click(function(event){		
-							event.preventDefault();
-							$('html,body').animate({scrollTop:$(this.hash).offset().top},1200);
-						});
-					});
-				</script>
-		   </div>
-		 </div>
-		
-	</div>
-	<!--end header-->
+<nav id="navbar" class="navbar navbar-fixed-top navbar-default navbar-inverse">
+	<div class="container-fluid">
+	<div class="navbar-header">
+		<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+			<span class="sr-only">Toggle navigation</span>
+			<span class="icon-bar"></span>
+			<span class="icon-bar"></span>
+			<span class="icon-bar"></span>
+			</button>
+			<a class="navbar-brand" href="/">
+				<img src="" height="50px;" alt="logo-image"></a>
+				</div><!-- Collect the nav links, forms, and other content for toggling -->
+				<div class="lp-select-city">
+					<span class="fa fw fa-street-view location-icon"></span>
+					<select class="lp-select-city-menu">
+						<option value="Bikaner">Bikaner</option>
+						<option value="Chandigarh">Chandigarh</option>
+					</select>
+				</div>
+				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+					<!--
+					<ul class="nav navbar-nav">
+											<li class="active h3"><a href="#"></a></li>
+											</ul>-->
+					
+						<ul class="nav navbar-nav navbar-right lp-header-navbar-nav">
+							<li class="city-select"></li>
+							<!--<li><a class="" href="">DEALS</a></li>-->
+							<li><a>SIGN IN</a></li>
+							</ul></div>
